--- a/my-ocean/src/main/resources/application.yml
+++ b/my-ocean/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     url: jdbc:mysql://localhost:3306/my_ocean?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
     password: Zx123456
+  redis:
+    host: 127.0.0.1
+    port: 6379
 
 
 mybatis:
